[package]
name = "flower"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya"}
aya-log = { git = "https://github.com/aya-rs/aya" }
flower-common = { path = "../flower-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
mio = { version = "1.0.2", features = ["os-ext"] }

[[bin]]
name = "flower"
path = "src/main.rs"
