[package]
name = "flower"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
flower-common = { path = "../flower-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
log = "0.4"
mio = { version = "1.0.2", features = ["os-ext"] }
cpu-instructions-reader = "0.3.0"
smallvec = "1.13.2"
num_cpus = "1.16.0"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[build-dependencies]
anyhow = "1"
